@@ -2,9 +2,7 @@
 
 include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
+dh = --with=python2
+
 override_dh_auto_configure:
 	$(overridden_command) -- -DBIN_INSTALL_DIR=/usr/games
-
-override_dh_auto_install:
-	$(overridden_command)
-	rm debian/kajongg/usr/share/kde4/apps/kajongg/*pyc
