@@ -1,6 +1,10 @@
 kajongg (4:4.10.80-0ubuntu1) UNRELEASED; urgency=low
 
+  [ Rohan Garg ]
   * New upstream release
+
+  [ Jonathan Riddell ]
+  * Use --with=python2
 
  -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 13 Jun 2013 09:04:36 +0100
 
